# jupytercon-2025-browser-ai-workflows

./: README.md  index.md  pyproject.toml
notebooks/: basic_arithmetic.py  pandas_tutorial.ipynb  typos.ipynb
